<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Weather now</string>
    <string name="action_settings">Settings</string>
    <string name="updated_message_pos">Updated successfully</string>
    <string name="updated_message_neg">Update falied</string>
    <string name="has_such_city_message">Such city is already exist.</string>
    <string name="city_name">City name</string>
    <string name="city_weather">Weather</string>
    <string name="city_temper">Temperature</string>
    <string name="city_datetime">Date</string>
    <string name="add_new_city_button">Add new сity</string>
    <string name="title_activity_forecast">forecast</string>
    <string name="weather_image_description">Weather icon</string>
    <string name="search_result">Search result:</string>
    <string name="search_result_fail">No matches found.</string>
    <string name="forecast_button_text">Show forecast</string>
    <string name="loading_weather">Loading…</string>
    <string name="open_settings">Settings</string>
    
    <string name="widget_name">My first widget</string>
    <string name="widget_weather_condition">weather condition</string>
	<string name="widget_city_name">city name</string>
	<string name="widget_weather_temperature">temperature</string>
	
	<string name="delete_dialog_title">Delete city</string>
	<string name="delete_dialog_text">Do you want to delete </string>
    <string name="delete_dialog_ok">OK</string>
    <string name="delete_dialog_cancel">Cancel</string>
	<string name="search_dialog_text">Searching…</string>
	
	<string name="toast_cant_make_favourite">Can`t make this city favourite.</string>
	<string name="toast_cant_delete">Can`t delete.</string>
	<string name="toast_weather_updated">Weather updated successfully.</string>
	<string name="toast_added_new_city">Added new city weather.</string>
	<string name="toast_no_connection">No connection!</string>
	
	<string name="service_updated_successfully">Updated successfully.</string>
	<string name="service_added_new_city">Added new city.</string>
	<string name="service_not_updated">Not updated. Connection problem.</string>
	<string name="service_not_added_new_city">Can`t add new city. Connection problem.</string>
	
	<string name="format_delete_question" formatted="false">%s %s ?</string>
	<string name="format_two_strings_space" formatted="false">%s %s</string>
	<string name="format_two_strings_tire" formatted="false">%s - %s</string>
    <string name="find_button">Find</string>

</resources>
