<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/widget_background"
    android:gravity="center"
    android:padding="3dp" >
	
    <ImageView
        android:id="@+id/widget_weather_image"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/img01"
        android:contentDescription="@string/weather_image_description" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="0dp"
        android:gravity="center" >
	    <TextView
	        android:id="@+id/widget_city_name"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:gravity="center"
	        android:text="@string/widget_city_name"
	        android:textColor="@color/text_blue_color"
	        android:textSize="16sp"
	        android:textAlignment="center" >
	    </TextView>
	    <TextView
	        android:id="@+id/widget_weather_temperature"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:gravity="center"
	        android:text="@string/widget_weather_temperature"
	        android:textColor="@color/text_blue_color"
	        android:textSize="18sp"
	        android:textAlignment="center" >
	    </TextView>
	    <TextView
	        android:id="@+id/widget_weather_condition"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:gravity="center"
	        android:text="@string/widget_weather_condition"
	        android:textColor="@color/text_blue_color"
	        android:textSize="13sp"
	        android:textAlignment="center" >
	    </TextView>
	</LinearLayout>
</LinearLayout>