<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:layout_marginTop="10dp"
    android:orientation="horizontal"
    android:padding="5dp" >

    <ImageView
        android:id="@+id/forecast_weather_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/weather_image_description"
        android:maxHeight="20dp"
        android:maxWidth="20dp"
        android:scaleType="center"
        android:src="@drawable/img01" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="0dp" >

        <TextView
            android:id="@+id/forecast_city_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="5dp"
            android:text="@string/city_temper"
            android:textColor="@color/text_blue_color"
            android:textSize="25sp" >
        </TextView>

        <TextView
            android:id="@+id/forecast_city_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="5dp"
            android:text="@string/city_weather"
            android:textColor="@color/text_blue_color"
            android:textSize="16sp" >
        </TextView>

        <TextView
            android:id="@+id/forecast_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/city_datetime"
            android:textColor="@color/text_blue_color"
            android:textSize="16sp" >
        </TextView>
    </LinearLayout>

</LinearLayout>